--- a/src/css/App.css
+++ b/src/css/App.css
@@ -15,10 +15,27 @@
   overflow: hidden;
 }
 
+.PersonEntry{
+  border-color: gray;
+  border: 4px;
+  background: rgb(107,107,107);
+  background: linear-gradient(0deg, rgba(107,107,107,1) 0%, rgba(177,177,177,1) 100%);
+
+}
 .addImg{
   height: 30px;
   display: flex;
   flex-direction: column;
+  margin-left: 50vw;
+  margin-top: 1vh;
+}
+
+.PersonDelete{
+  height: 30px;
+}
+
+.EditPerson{
+  height: 30px;
 }
 
 .App-header {
@@ -55,7 +72,7 @@
   flex-direction: row;
  justify-content: space-around;
  padding: 1%;
- 
+
 }
 
 .bottomButton {
@@ -119,8 +136,30 @@ transform-origin: 0 0;
 .Budgett{
  border-radius: 10px;
  align-items: center;
- position: absolute;
- 
- 
+
 }
 
+
+#budget-list{
+  border: 0;
+  padding: 0 20px;
+  border-radius: 10px;
+}
+
+#budget-list input:focus{
+  outline:none;
+}
+
+#budget-list button{
+  border-radius: 10px;
+  border:0;
+  background-color: red;
+  cursor: pointer;
+}
+#budget-list input:focus,#budget-list button:focus{
+  outline: none;
+}
+
+.popupContainer > div {
+  background-color: rgba(0,0,0,0.3);
+}
