--- a/src/css/App.css
+++ b/src/css/App.css
@@ -22,12 +22,15 @@
   background: linear-gradient(0deg, rgba(107,107,107,1) 0%, rgba(177,177,177,1) 100%);
 
 }
-.addImg{
-  height: 30px;
+.center{
   display: flex;
   flex-direction: column;
-  margin-left: 50vw;
-  margin-top: 1vh;
+  justify-content: center;
+}
+
+.center img{
+  height: 50px;
+  margin: 10px;
 }
 
 .PersonDelete{
@@ -71,14 +74,17 @@
   display: flex;
   flex-direction: row;
  justify-content: space-around;
- padding: 1%;
-
+ height: 100%;
 }
 
-.bottomButton {
-height: 200%;
-padding: 10%;
-}
+.bottomButtons>* {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+} 
 
 .mainContent {
   flex: 1;
@@ -162,4 +168,17 @@ transform-origin: 0 0;
 
 .popupContainer > div {
   background-color: rgba(0,0,0,0.3);
+}
+
+/* Lägg till person*/
+.aText{
+  font-size: large;
+  
+}
+
+/* Budget text*/
+.BudgetButton{
+  cursor: pointer;
+  font-size: large;
+  
 }
